// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creator component should match exact snapshot 1`] = `
<div
  className="relative flex justify-between text-gray-300"
>
  <div
    className="p-2  "
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="w-5 h-5 m-auto  "
      onMouseDown={[Function]}
      role="button"
      tabIndex={0}
    >
      <svg
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6v6m0 0v6m0-6h6m-6 0H6"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
        />
      </svg>
    </div>
  </div>
  <div
    className="p-2  "
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="w-5 h-5 m-auto  "
      onMouseDown={[Function]}
      role="button"
      tabIndex={0}
    >
      <svg
        className=""
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Test creator actions should call confirmName should filter icon 1`] = `
Array [
  Object {
    "payload": "fake-name",
    "type": "creator/setName",
  },
  Object {
    "payload": Object {
      "count": 20,
      "icon": undefined,
      "id": 20,
      "link": "fake-link",
      "name": "fake-name",
    },
    "type": "source/create",
  },
  Object {
    "payload": undefined,
    "type": "creator/reset",
  },
]
`;

exports[`Test creator actions should call confirmName should set count by mode 1`] = `
Array [
  Object {
    "payload": "fake-name",
    "type": "creator/setName",
  },
  Object {
    "payload": Object {
      "count": 0,
      "icon": "fake-icon",
      "id": 20,
      "link": "fake-link",
      "name": "fake-name",
    },
    "type": "source/create",
  },
  Object {
    "payload": undefined,
    "type": "creator/reset",
  },
]
`;

exports[`Test creator actions should call searchUrl 1`] = `
Array [
  Object {
    "payload": true,
    "type": "creator/setLoading",
  },
  Object {
    "payload": "fake-link",
    "type": "creator/setLink",
  },
  Object {
    "payload": "name",
    "type": "creator/setName",
  },
  Object {
    "payload": undefined,
    "type": "creator/stepToEnterName",
  },
  Object {
    "payload": false,
    "type": "creator/setLoading",
  },
]
`;
